kubernetes-docs/2.service-mesh/istio/5.load-balancing/lb.destination_rule.yml
kind: DestinationRule
apiVersion: networking.istio.io/v1
metadata:
  namespace: default
  name: fleetman-staff-service
spec:
  host: fleetman-staff-service
  subsets:
  - name: all-staff-service-pod # check <---
    labels:
      app: staff-service
